sumo/tests/sumo/extended/emitter/errors/routedist/empty_prob/errors.sumo
Error: MSTriggeredSource emitter: Attribute 'probability' for route '1' is not given.
Quitting (on error).
